changed all links to lowercase

--- a/ShoesNews20205/ShoesNewsFeb.2025/FootwearNYfashionWeek.html
+++ b/ShoesNews20205/ShoesNewsFeb.2025/FootwearNYfashionWeek.html
@@ -60,19 +60,19 @@
                         <a class="nav-link" href="../../Index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../CharityWalks.html">Charity Walks</a>
+                        <a class="nav-link" href="../../charitywalks.html">Charity Walks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Shoes.html">Shoes</a>
+                        <a class="nav-link" href="../../shoes.html">Shoes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../ShoesNews.html">Shoes News</a>
+                        <a class="nav-link" href="../../shoesnews.html">Shoes News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../About.html">About</a>
+                        <a class="nav-link" href="../../about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Contact.html">Contact</a>
+                        <a class="nav-link" href="../../contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
