--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <title>About Page - MiamiWalking.com - Miami</title>
-  <link rel="canonical" href="https://miamiwalking.com/About.html">
+  <link rel="canonical" href="https://miamiwalking.com/about.html">
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
@@ -61,19 +61,19 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+            <a class="nav-link" href="charitywalks.html">Charity Walks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
+            <a class="nav-link" href="shoes.html">Shoes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+            <a class="nav-link" href="shoesnews.html">Shoes News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
