--- a/mensshoes.html
+++ b/mensshoes.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <title>Men's Shoes - MiamiWalking.com - Miami</title>
-  <link rel="canonical" href="https://miamiwalking.com/MensShoes.html">
+  <link rel="canonical" href="https://miamiwalking.com/mensshoes.html">
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
@@ -60,19 +60,19 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+            <a class="nav-link" href="charitywalks.html">Charity Walks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
+            <a class="nav-link" href="shoes.html">Shoes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+            <a class="nav-link" href="shoesnews.html">Shoes News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -98,12 +98,12 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="MensExerciseShoes.html">
+                                <a href="mensexerciseshoes.html">
                                     <img src="img/Hoka Mens Sr. Bondi.jpg" class="card-img-top"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="MensExerciseShoes.html" class="btn btn-outline-light btn-primary">Excercise
+                                    <a href="mensexerciseshoes.html" class="btn btn-outline-light btn-primary">Excercise
                                         Shoes</a>
                                 </div>
 
@@ -118,7 +118,7 @@
                                         alt="Event 1 Image - Description of the event" loading="lazy">
                                 </a>
                                 <div class="card-body text-center">
-                                    <a href="MensCasualShoes.html" class="btn  btn-outline-light btn-primary">Casual  Shoes</a>
+                                    <a href="menscasualshoes.html" class="btn  btn-outline-light btn-primary">Casual  Shoes</a>
                                 </div>
 
                             </div>
@@ -165,12 +165,12 @@
                     <h5>Navigation</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="Food&Beverage.html" class="nav-link">Food & Beverage</a></li>
-                        <li class="nav-item"><a href="Videos.html" class="nav-link">Videos</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Food & Beverage</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Videos</a></li>
                         <li class="nav-item"><a href="News.html" class="nav-link">News</a></li>
-                        <li class="nav-item"><a href="Events.html" class="nav-link">Events</a></li>
-                        <li class="nav-item"><a href="About.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Events</a></li>
+                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
 
