--- a/comfortshoes.html
+++ b/comfortshoes.html
@@ -61,19 +61,19 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+            <a class="nav-link" href="charitywalks.html">Charity Walks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
+            <a class="nav-link" href="shoes.html">Shoes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+            <a class="nav-link" href="shoesnews.html">Shoes News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -107,7 +107,7 @@
                                 </a>
 
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-dark">Skechers Women's
+                                    <a href="charitywalks.html" class="btn btn-outline-light btn-dark">Skechers Women's
                                         Go Walk Joy Sneaker</a>
                                 </div>
 
@@ -123,7 +123,7 @@
                                 </a>
 
                                 <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">Kizik Shoes:
+                                    <a href="charitywalks.html" class="btn  btn-outline-light btn-dark">Kizik Shoes:
                                         Madrid Eco-Knit Slip On </a>
                                 </div>
 
@@ -147,12 +147,12 @@
                     <h5>Navigation</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="Food&Beverage.html" class="nav-link">Food & Beverage</a></li>
-                        <li class="nav-item"><a href="Videos.html" class="nav-link">Videos</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Food & Beverage</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Videos</a></li>
                         <li class="nav-item"><a href="News.html" class="nav-link">News</a></li>
-                        <li class="nav-item"><a href="Events.html" class="nav-link">Events</a></li>
-                        <li class="nav-item"><a href="About.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Events</a></li>
+                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
 
