--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+            <a class="nav-link" href="charitywalks.html">Charity Walks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
+            <a class="nav-link" href="shoes.html">Shoes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+            <a class="nav-link" href="shoesnews.html">Shoes News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -101,28 +101,28 @@
           <div class="row justify-content-center">
             <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
               <div class="card">
-                <a href="CharityWalks.html">
+                <a href="charitywalks.html">
                   <div class="d-flex justify-content-center align-items-center">
                     <img src="img/person-walking-solid (1).svg" class="card-img-top svg-card-img-2"
                       alt="Description of image">
                   </div>
                 </a>
                 <div class="card-body text-center">
-                  <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">Charity Walks</a>
+                  <a href="charitywalks.html" class="btn btn-outline-light btn-primary">Charity Walks</a>
                 </div>
 
               </div>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
               <div class="card">
-                <a href="Shoes.html">
+                <a href="shoes.html">
                   <div class="d-flex justify-content-center align-items-center">
                     <img src="img/Steps Icon Black.svg" class="card-img-top svg-card-img material-icons"
                       alt="Description of image">
                   </div>
                 </a>
                 <div class="card-body text-center">
-                  <a href="Shoes.html" class="btn  btn-outline-light btn-primary">Shoes</a>
+                  <a href="shoes.html" class="btn  btn-outline-light btn-primary">Shoes</a>
                 </div>
               </div>
             </div>
@@ -143,12 +143,12 @@
           <h5>Navigation</h5>
           <ul class="nav flex-column">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="Food&Beverage.html" class="nav-link">Food & Beverage</a></li>
-            <li class="nav-item"><a href="Videos.html" class="nav-link">Videos</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Food & Beverage</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Videos</a></li>
             <li class="nav-item"><a href="News.html" class="nav-link">News</a></li>
-            <li class="nav-item"><a href="Events.html" class="nav-link">Events</a></li>
-            <li class="nav-item"><a href="About.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Events</a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
 
