--- a/shoesnews.html
+++ b/shoesnews.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <title>Shoes News - MiamiWalking.com - Miami</title>
-  <link rel="canonical" href="https://miamiwalking.com/ShoesNews.html">
+  <link rel="canonical" href="https://miamiwalking.com/shoesnews.html">
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
@@ -60,19 +60,19 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+            <a class="nav-link" href="charitywalks.html">Charity Walks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
+            <a class="nav-link" href="shoes.html">Shoes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+            <a class="nav-link" href="shoesnews.html">Shoes News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -125,12 +125,12 @@
             <h5>Navigation</h5>
             <ul class="nav flex-column">
               <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="Food&Beverage.html" class="nav-link">Food & Beverage</a></li>
-              <li class="nav-item"><a href="Videos.html" class="nav-link">Videos</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Food & Beverage</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Videos</a></li>
               <li class="nav-item"><a href="News.html" class="nav-link">News</a></li>
-              <li class="nav-item"><a href="Events.html" class="nav-link">Events</a></li>
-              <li class="nav-item"><a href="About.html" class="nav-link">About</a></li>
-              <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Events</a></li>
+              <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
           </div>
 
