Added Pet Walking page with placeholder cards

--- a/petwalking.html
+++ b/petwalking.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
     <meta http-equiv="X-Frame-Options" content="sameorigin">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
-    <title>South Florida Walking Tours - MiamiWalking.com - Miami</title>
+    <title>South Florida Pet Walking Services - MiamiWalking.com - Miami</title>
     <link rel="canonical" href="https://miamiwalking.com/charitywalks.html">
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <link href="bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@
             <div class="col-12 col-lg-8">
 
                 <div class="title-section text-center  mb-5">
-                    <h1>South Florida Walking Tours </h1>
+                    <h1>South Florida Pet Walking Services </h1>
                     <!-- <p class="lead">Discover Miami through food, culture, and lifestyle.</p> -->
                 </div>
 
@@ -98,16 +98,15 @@
                     <div class="row justify-content-center">
                         <div class="col-md-4 col-sm-6 col-12 mb-4">
                             <div class="card h-100">
-                                <a href="https://littlehavanawalkingtour.com/" rel="noopener noreferrer"
-                                    target="_blank">
-                                    <img src="img/Little Havana Walking Tours.jpg" class="card-img-top mb-2"
+                                <a href="https://equipawspetservices.com/" rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Equipaws Dog Walking Service 2.jpg" class="card-img-top mb-2"
                                         alt="Little Havana Walking Tour" loading="lazy">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title mb-3">Little Havana Walking Tour</h5>
+                                    <h5 class="card-title mb-3">Equipaws Pet Services</h5>
                                     <p class="card-text mb-4"><strong>Location:</strong> Miami, Florida
                                     </p>
-                                    <a href="https://littlehavanawalkingtour.com/" class="btn btn-primary"
+                                    <a href="https://equipawspetservices.com/" class="btn btn-primary"
                                         rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
                             </div>
@@ -115,16 +114,15 @@
 
                         <div class="col-md-4 col-sm-6 col-12 mb-4">
                             <div class="card h-100">
-                                <a href="https://littlehavanawalkingtour.com/" rel="noopener noreferrer"
-                                    target="_blank">
-                                    <img src="img/Little Havana Walking Tours.jpg" class="card-img-top mb-2"
+                                <a href="https://www.pawsmiami.com/" rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Paws Miami.jpg" class="card-img-top mt-3 mb-2"
                                         alt="Little Havana Walking Tour" loading="lazy">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title mb-3">Little Havana Walking Tour</h5>
+                                    <h5 class="card-title mb-3">Paws Miami</h5>
                                     <p class="card-text mb-4"><strong>Location:</strong> Miami, Florida
                                     </p>
-                                    <a href="https://littlehavanawalkingtour.com/" class="btn btn-primary"
+                                    <a href="https://www.pawsmiami.com/" class="btn btn-primary"
                                         rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
                             </div>
@@ -132,16 +130,15 @@
 
                         <div class="col-md-4 col-sm-6 col-12 mb-4">
                             <div class="card h-100">
-                                <a href="https://littlehavanawalkingtour.com/" rel="noopener noreferrer"
-                                    target="_blank">
-                                    <img src="img/Little Havana Walking Tours.jpg" class="card-img-top mb-2"
+                                <a href="https://miamipetconcierge.com/" rel="noopener noreferrer" target="_blank">
+                                    <img src="img/Miami Pet Concierge.jpg" class="card-img-top mt-2 mb-2 border-bottom"
                                         alt="Little Havana Walking Tour" loading="lazy">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title mb-3">Little Havana Walking Tour</h5>
+                                    <h5 class="card-title mb-3">Miami Pet Concierge</h5>
                                     <p class="card-text mb-4"><strong>Location:</strong> Miami, Florida
                                     </p>
-                                    <a href="https://littlehavanawalkingtour.com/" class="btn btn-primary"
+                                    <a href="https://miamipetconcierge.com/" class="btn btn-primary"
                                         rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
                             </div>
