Added Bing Meta Tag for indexing by Bing Web Tools

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
   <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
+  <meta name="msvalidate.01" content="135850CF1D84ADF86A9327900E7AC28D" />
   <title>Home Page - MiamiWalking.com - Miami</title>
   <link rel="canonical" href="https://miamiwalking.com/index.html">
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
