--- a/charitywalks.html
+++ b/charitywalks.html
@@ -12,6 +12,7 @@
         <meta http-equiv="X-Frame-Options" content="sameorigin">
         <meta http-equiv="Cache-Control" content="max-age=31536000">
         <title>Charity Walks - MiamiWalking.com - Miami</title>
+        <meta name="description" content="A Curated List of South Florida Charity Walks Scheduled for 2025">
         <link rel="canonical" href="https://miamiwalking.com/charitywalks.html">
         <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
         <link href="bootstrap.min.css" rel="stylesheet">
@@ -36,11 +37,11 @@
         <!-- Header Section -->
         <header class="bg-white py-3">
           <div class="container text-center">
-            <h1 class="m-0">
+            <div class="m-0">
               <a href="index.html" title="Home">
                 <img src="img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo" >
               </a>
-            </h1>
+            </div>
           </div>
         </header>
   <!-- Navigation Bar -->
