--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <meta name="msvalidate.01" content="135850CF1D84ADF86A9327900E7AC28D" />
   <title>Home Page - MiamiWalking.com - Miami</title>
+  <meta name="description" content="Home page of MiamiWalking.com">
   <link rel="canonical" href="https://miamiwalking.com/index.html">
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <link href="bootstrap.min.css" rel="stylesheet">
