Change all navbar links from charitywalks.html to walking.html

--- a/walking.html
+++ b/walking.html
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="charitywalks.html">Charity Walks</a>
+                        <a class="nav-link" href="walking.html">Walking</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="shoes.html">Shoes</a>
@@ -84,11 +84,10 @@
                 <!-- Keeps sidebar space occuppied -->
             </div>
             <!-- Main Section -->
-            <div class="col-12 col-lg-8">
-
+            <div class="col-12 col-lg-8"><!-- 
                 <div class="title-section text-center  mb-5">
                     <h1>Miami Walking</h1>
-                </div>
+                </div> -->
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
