changed charitywalks.html navbar link to walking.html link in mensexerciseshoes.html and womenscasualshoes.html

--- a/mensexerciseshoes.html
+++ b/mensexerciseshoes.html
@@ -59,8 +59,8 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="charitywalks.html">Charity Walks</a>
-                    </li>
+                        <a class="nav-link" href="walking.html">Walking</a>
+                      </li>
                     <li class="nav-item">
                         <a class="nav-link" href="shoes.html">Shoes</a>
                     </li>
