removed expired charity walks from list and put next walk on a div without div class=col-md-4 col-sm-6 col-12 mb-4, thus making it larger on full width screens

--- a/charitywalks.html
+++ b/charitywalks.html
@@ -94,48 +94,9 @@
                 </div>
 
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-6 col-12 mb-4">
-                            <div class="card h-100">
-                                <a href="https://www.comop.org/cupidschase/" rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Cupids Chase 4 .JPG" class="card-img-top"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title">2025 Cupid's Chase Key West 5km</h5>
-                                    <p class="card-text"><strong>Date:</strong> February 8, 2025 </p>
-                                    <p class="card-text"><strong>Location:</strong> Higgs Beach Pavilion <br>
-                                        1000 Atlantic Boulevard
-                                        Key West, FL US 33040</p>
-                                    <a href="https://www.comop.org/cupidschase/" class="btn btn-primary"
-                                        rel="noopener noreferrer" target="_blank">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-12 mb-4">
-                            <div class="card h-100">
-                                <a href="https://feedingsouthflorida.org/upcoming-events/" rel="noopener noreferrer"
-                                    target="_blank">
-                                    <img src="img/Tropical Park Charity Walk Feb. 2025  4.jpg" class="card-img-top"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title">Outrun Hunger 5k - Miami 2025</h5>
-                                    <p class="card-text"><strong>Date:</strong>February 15, 2025 </p>
-                                    <p class="card-text"><strong>Location:</strong> Tropical Park <br>
-                                        7900 SW 40th St
-                                        Miami, FL 33155
-                                    </p>
-                                    <a href="https://feedingsouthflorida.org/upcoming-events/" class="btn btn-primary"
-                                        rel="noopener noreferrer" target="_blank">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <div class="col-md-4 col-sm-6 col-12 mb-4">
-                            <div class="card h-100">
+                    <div class="row">                    
+                        <!-- <div class="col-md-4 col-sm-6 col-12 mb-4"> -->
+                            <div class="card h-100 mb-5">
                                 <a href="https://sandyovarian.org/programs-and-events/events/sandy-sprint-5k-run-walk-hollywood"
                                     rel="noopener noreferrer" target="_blank">
                                     <img src="img/Sandy Sprint 5.jpg" class="card-img-top"
@@ -151,7 +112,7 @@
                                         class="btn btn-primary" rel="noopener noreferrer" target="_blank">Learn More</a>
                                 </div>
                             </div>
-                        </div>
+                        <!-- </div> -->
 
 
                         <div class="col-md-4 col-sm-6 col-12 mb-4">
