Added multiple lite-youtube components to index page and set lite-youtube to loading = lazy in styles.css

--- a/index.html
+++ b/index.html
@@ -129,6 +129,83 @@
         </p>
       </div>
 
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="bmyL56iKBLI" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="D6GhZG6ddrc" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="PjJDBOsokUI" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="fdu5q_K3T2U" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="Ec4mu3L4F_c" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>    
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="QN-F6nFveqA" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="6wMeLjx31Xc" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="LliP067Qw2U" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="g1YR84MSZKQ" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+      <div class="youtube-section mt-1 mb-5 card border-3" >
+        <lite-youtube videoid="MTHn1xiuR_E" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
+        <p class="video-caption">
+          South Beach Broadwalk
+        </p>
+      </div>
+
+
+
+
+      
+
+
+
       <!-- Card Grid -->
       <div class="container">
         <div class="row justify-content-center">
